reajustation des liens vers index.html

--- a/Html/about.html
+++ b/Html/about.html
@@ -13,7 +13,7 @@
                 <div class="logo">
                     <img src="../imgs/logo_renart_trans.png" alt="logo du site">
                 </div>
-                <li><a class="nav_links" href="./home.html">Home</a></li>
+                <li><a class="nav_links" href="../index.html">Home</a></li>
                 <li class="dropdown-services">
                     <a class="nav_links" href="./services.html">Services</a>
                     <div class="dropdown-services-content"> 
