contact to about fixed

--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                 </li>
                 <li><a class="actif nav_links" href="#">Contact</a></li>
                 <li><a id="hire" href="mailto:workandworkspace@gmail.com?subject=Your%20Subject&body=Your%20message%20here">Hire me</a></li>
-                <li id="end-ul"><a class="nav_links" href="../Html/about.html">About</a></li>
+                <li id="end-ul"><a class="nav_links" href="./about.html">About</a></li>
             </ul>
             
         </nav>
