--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
         <link rel="stylesheet" href="../Css/Home/homeSec3.css">
         <link rel="stylesheet" href="../Css/Home/homeSec4.css">
         <link rel="stylesheet" href="../Css/Home/homeSec5.css">
-        
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
-        
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&display=swap" rel="stylesheet">
 
     </head>
     <body>
@@ -131,7 +127,7 @@
                     <div id="bg_blur">
                     </div>
                     <div id="back_hleft">
-                        <h2 class="lite-left-hidden-element"> Hello I'm <br> <span>Cornélius LAWSON</span></h2>
+                        <h2 class="lite-left-hidden-element"> Hi I'm <br> <span>Cornélius LAWSON</span></h2>
                         <p class="lite-left-hidden-element">I'm :</p>
                         <ul class="lite-left-hidden-element">
                             <li class="lite-left-hidden-element"><p> <strong>Developer and Designer</strong> <br>
@@ -147,7 +143,7 @@
                         </ul>
                         <div id="account">
                             <div id="div_btn">
-                                <a href="../Html/about.html#ancreH1Sec1">Learn more...</a>
+                                <a href="./about.html#ancreH1Sec1">Learn more...</a>
                             </div>
                             <div id="div_social">
                                 <a class="socials" href="https://github.com/ghostOfCo" target="_blank" id="git_link">
@@ -192,8 +188,8 @@
                     </div>
                     <div id="div_all_services_sec1">
                         <img  src="../imgs/uxServices.svg" alt="plume de design" class="div_services_sec1 lite-left-hidden-element" id="sec1_service_haut">
-                        <img  src="../imgs/des-services.svg" alt="training de design" class="div_services_sec1" id="sec1_service_centre">
-                        <img  src="../imgs/program-services.svg" alt="service de programmation" class="div_services_sec1 lite-left-hidden-element" id="sec1_service_bas">
+                        <img  src="../imgs/des-services.svg" alt="training de design" class="div_services_sec1 lite-bottom-hidden-element" id="sec1_service_centre">
+                        <img  src="../imgs/program-services.svg" alt="service de programmation" class="div_services_sec1 lite-right-hidden-element" id="sec1_service_bas">
                     </div>        
                 </div>
                 <div id="sec1_droite">
@@ -222,13 +218,13 @@
                     </div>
                     <div id="div_process">
                         <div class="process_cadres lite-right-hidden-element" id="prohaut"></div>
-                        <div class="process_cadres" id="procentre"></div>
+                        <div class="process_cadres lite-bottom-hidden-element" id="procentre"></div>
                         <img src="../imgs/process1.svg" alt="idee de design" class="process_cadres lite-left-hidden-element" id="probas">
                     </div>                   
                 </div>
                 <div id="sec3_droite">
                     <p class="lite-right-hidden-element">From the <strong>simple sketch</strong> to the <strong>concrete creation</strong>, everythings is done <strong>with care</strong>.</p>
-                    <a href="../Html/services.html#ancreSec7"id="btn_plus_sec3">See more</a>
+                    <a href="./services.html#ancreSec7"id="btn_plus_sec3">See more</a>
                 </div>
             </div>
         </section>
@@ -244,7 +240,7 @@
                             -Video montages<br>
                         </strong>
                     </p>
-                    <a href="../Html/about.html#ancreSec2"id="btn_plus_sec4">See more</a>
+                    <a href="./about.html#ancreSec2"id="btn_plus_sec4">See more</a>
                 </div>
                 <div id="sec4_droite">
                     <div id="div_h1_sec4">
