--- a/about.html
+++ b/about.html
@@ -124,16 +124,20 @@
                 <div class="stats">
                     <div class="numbers">
                         <div>
-                            <p class="lite-left-hidden-element">15+</p>
+                            <p class="lite-left-hidden-element">04+</p>
+                            <p>years of experience</p>
                         </div>
                         <div>
-                            <p class="lite-left-hidden-element">350+</p>
+                            <p class="lite-left-hidden-element">03+</p>
+                            <p>projects completed</p>
                         </div>
                         <div>
-                            <p class="lite-left-hidden-element">200+</p>
+                            <p class="lite-left-hidden-element">07+</p>
+                            <p>technical skills</p>
                         </div>
                         <div>
-                            <p class="lite-left-hidden-element">45k</p>
+                            <p class="lite-left-hidden-element">11+</p>
+                            <p>codes commited</p>
                         </div>
                     </div>
                     <div class="my-works">
@@ -173,8 +177,8 @@
                 </div>
             </div>
         </section>       
-        <section class="section2">
-            <h1 class="lite-right-hidden-element" id="ancreSec2">Skills</h1>
+        <section id="ancreSec2" class="section2">
+            <h1 class="lite-right-hidden-element" >Skills</h1>
             <p class="title lite-top-hidden-element">Software & Technology</p>
             <div class="container">
                 <div class="element lite-left-hidden-element">
