compression des images lords

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
                 <div id="head-right">
                     <div class="lite-right-hidden-element profil">
-                        <img src="../imgs/cosite.png" alt="profil">
+                        <img src="./imgs/cosite.webp" alt="profil">
                     </div>
                 </div>
 
@@ -204,9 +204,9 @@
                     <h1 class="lite-right-hidden-element">Recent projects</h1>
                 </div>    
                 <div id="div_pro_sec2">
-                    <img src="../imgs/gaming.png" alt="gaming" class="div_projets_sec2_lat lite-left-hidden-element" id="sec2_projet_gauche">
-                    <img src="../imgs/gemini.png" alt="gemini" id="sec2_projet_centre" class="bottom-hidden-element">
-                    <img src="../imgs/juice.png" class="div_projets_sec2_lat lite-right-hidden-element" id="sec2_projet_droite">
+                    <img src="./imgs/gaming.webp" alt="gaming" class="div_projets_sec2_lat lite-left-hidden-element" id="sec2_projet_gauche">
+                    <img src="./imgs/gemini.webp" alt="gemini" id="sec2_projet_centre" class="bottom-hidden-element">
+                    <img src="./imgs/juice.webp" class="div_projets_sec2_lat lite-right-hidden-element" id="sec2_projet_droite">
                 </div>                       
             </div>
         </section>
