--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
             <h2 class="lite-left-hidden-element" id="ancreCd">Code projects</h2>
             <h3 class="lite-left-hidden-element" id="ancreCdLatest">Latest</h3>
             <div class="center-sec1">
-                <img class="lite-right-hidden-element" src="../imgs/CodeProjectSkillslang.png" alt="image de code">
+                <img class="lite-right-hidden-element" src="./imgs/CodeProjectSkillslang.png" alt="image de code">
                 <p class="lite-left-hidden-element">Sleek and Responsive Design: With a mobile-first approach, the website adapts seamlessly to different screen sizes, providing an optimized experience for every user.
                     Dynamic Content: JavaScript brings the site to life with interactive elements, smooth animations, and real-time data updates, making browsing a truly engaging experience.
                     Fast Loading & Optimized Performance: I prioritized speed and efficiency, ensuring the website loads quickly without compromising on design or functionality.
@@ -124,8 +124,8 @@
             <h3 class="lite-left-hidden-element" id="ancreCdWebP">Web projects</h3>
             <div class="content">
                 <div class="left">
-                    <img class="lite-left-hidden-element" src="../imgs/webProjectHome.png" alt="codes generated images">
-                    <img class="lite-left-hidden-element" src="../imgs/webProjectServices.png" alt="codes generated images">
+                    <img class="lite-left-hidden-element" src="./imgs/webProjectHome.webp" alt="codes generated images">
+                    <img class="lite-left-hidden-element" src="./imgs/webProjectServices.webp" alt="codes generated images">
                 </div>
                 <div class="right">
                     <p class="descriptions lite-right-hidden-element">
@@ -149,16 +149,16 @@
             <div class="carousel">               
                 <div class="carousel-track">
                   <div class="carousel-slide small">
-                    <img src="../imgs/gaming.png" alt="Image 1">
+                    <img loading="lazy" src="./imgs/gaming.webp" alt="Image 1">
                   </div>
                   <div class="carousel-slide large">
-                    <img src="../imgs/romance ai ps.png" alt="Image 2">
+                    <img loading="lazy" src="./imgs/romance ai ps.webp" alt="Image 2">
                   </div>
                   <div class="carousel-slide small">
-                    <img src="../imgs/juice.png" alt="Image 3">
+                    <img loading="lazy" src="./imgs/juice.webp" alt="Image 3">
                   </div>
                   <div class="carousel-slide">
-                    <img src="../imgs/gemini.png" alt="Image 2">
+                    <img loading="lazy" src="./imgs/gemini.webp" alt="Image 2">
                   </div>
                 </div>
             </div>  
@@ -189,9 +189,9 @@
                 Take a Closer Look!
                 Imagine the possibilities for your next project. Ready to make your event unforgettable? <a href="./contact.html">Let’s create together!</a></p>
             <div class="middle">
-                <div class="img-cont lite-bottom-hidden-element"><img src="../imgs/postDelices.png" alt=""></div>
-                <div class="img-cont lite-right-hidden-element"><img src="../imgs/postEduc.png" alt=""></div>
-                <div class="img-cont lite-right-hidden-element"><img src="../imgs/gemini.png" alt=""></div>
+                <div class="img-cont lite-bottom-hidden-element"><img loading="lazy" src="./imgs/postDelices.webp" alt=""></div>
+                <div class="img-cont lite-right-hidden-element"><img loading="lazy" src="./imgs/postEduc.webp" alt=""></div>
+                <div class="img-cont lite-right-hidden-element"><img loading="lazy" src="./imgs/gemini.webp" alt=""></div>
             </div>
         </section>
 
