--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
                 <h1 class="lite-bottom-hidden-element" id="ancreH1Sec1">About me</h1>
                 <div class="profil-info">
                     <div class="lite-left-hidden-element profil">
-                        <img src="../imgs/cosite.png" alt="profil">
+                        <img src="./imgs/cosite.webp" alt="profil">
                     </div>
                     <a class="resume lite-right-hidden-element" href="../docs/CV pdf.pdf">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><g fill="none" stroke="#F5B91D" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"><path fill="#1D180F" fill-opacity="0" stroke-dasharray="20" stroke-dashoffset="20" d="M12 4h2v6h2.5l-4.5 4.5M12 4h-2v6h-2.5l4.5 4.5"><animate attributeName="d" begin="0.5s" dur="1.5s" repeatCount="indefinite" values="M12 4h2v6h2.5l-4.5 4.5M12 4h-2v6h-2.5l4.5 4.5;M12 4h2v3h2.5l-4.5 4.5M12 4h-2v3h-2.5l4.5 4.5;M12 4h2v6h2.5l-4.5 4.5M12 4h-2v6h-2.5l4.5 4.5"/><animate fill="freeze" attributeName="fill-opacity" begin="0.7s" dur="0.15s" values="0;0.3"/><animate fill="freeze" attributeName="stroke-dashoffset" dur="0.4s" values="20;0"/></path><path stroke-dasharray="14" stroke-dashoffset="14" d="M6 19h12"><animate fill="freeze" attributeName="stroke-dashoffset" begin="0.5s" dur="0.2s" values="14;0"/></path></g></svg>
