--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                         <h1 class="lite-left-hidden-element">Services offered</h1>
                     </div>
                     <div id="div_all_services_sec1">
-                        <img  src="../imgs/uxServices.svg" alt="plume de design" class="div_services_sec1 lite-left-hidden-element" id="sec1_service_haut">
-                        <img  src="../imgs/des-services.svg" alt="training de design" class="div_services_sec1 lite-bottom-hidden-element" id="sec1_service_centre">
+                        <img  src="../imgs/uxServices.svg" alt="services d'UX-UI" class="div_services_sec1 lite-left-hidden-element" id="sec1_service_haut">
+                        <img  src="../imgs/des-services.svg" alt="services de design" class="div_services_sec1 lite-bottom-hidden-element" id="sec1_service_centre">
                         <img  src="../imgs/program-services.svg" alt="service de programmation" class="div_services_sec1 lite-right-hidden-element" id="sec1_service_bas">
                     </div>        
                 </div>
@@ -204,9 +204,9 @@
                     <h1 class="lite-right-hidden-element">Recent projects</h1>
                 </div>    
                 <div id="div_pro_sec2">
-                    <img src="./imgs/gaming.webp" alt="gaming" class="div_projets_sec2_lat lite-left-hidden-element" id="sec2_projet_gauche">
-                    <img src="./imgs/gemini.webp" alt="gemini" id="sec2_projet_centre" class="bottom-hidden-element">
-                    <img src="./imgs/juice.webp" class="div_projets_sec2_lat lite-right-hidden-element" id="sec2_projet_droite">
+                    <img src="./imgs/gaming.webp" alt="gaming poster" class="div_projets_sec2_lat lite-left-hidden-element" id="sec2_projet_gauche">
+                    <img src="./imgs/gemini.webp" alt="gemini poster" id="sec2_projet_centre" class="bottom-hidden-element">
+                    <img src="./imgs/juice.webp" alt="juice poster" class="div_projets_sec2_lat lite-right-hidden-element" id="sec2_projet_droite">
                 </div>                       
             </div>
         </section>
