--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav>
                 <ul>
                     <div class="logo">
-                        <img src="../imgs/logo_renart_trans.png" alt="logo du site">
+                        <img loading="lazy" src="./imgs/logo_renart_trans.webp" alt="logo du site">
                     </div>
                     <li><a class="actif nav_links" href="#">Home</a></li>
                     <li class="dropdown-services">
@@ -205,7 +205,7 @@
                 </div>    
                 <div id="div_pro_sec2">
                     <img src="./imgs/gaming.webp" alt="gaming poster" class="div_projets_sec2_lat lite-left-hidden-element" id="sec2_projet_gauche">
-                    <img src="./imgs/gemini.webp" alt="gemini poster" id="sec2_projet_centre" class="bottom-hidden-element">
+                    <img src="./imgs/gemini.webp" alt="gemini poster" id="sec2_projet_centre" class="lite-bottom-hidden-element">
                     <img src="./imgs/juice.webp" alt="juice poster" class="div_projets_sec2_lat lite-right-hidden-element" id="sec2_projet_droite">
                 </div>                       
             </div>
@@ -247,11 +247,11 @@
                         <h1 class="lite-right-hidden-element">SKILLS</h1>
                     </div>
                     <div id="div_comp_sec4">
-                        <img src="../imgs/skill-icons--cpp.svg" alt="c++" class="cpts lite-left-hidden-element" id="cpt1">
-                        <img src="../imgs/javascript.png" alt="javascript" class="cpts lite-right-hidden-element" id="cpt2">
-                        <img src="../imgs/photoshop.png" alt="photoshop" class="cpts lite-left-hidden-element" id="cpt3">
-                        <img src="../imgs/illustrator.png" alt="illustrator" class="cpts lite-right-hidden-element" id="cpt4">
-                        <img src="../imgs/premiere_pro.png" alt="premiere pro" class="cpts lite-left-hidden-element" id="cpt5">
+                        <img src="./imgs/skill-icons--cpp.svg" alt="c++" class="cpts lite-left-hidden-element" id="cpt1">
+                        <img src="./imgs/javascript.webp" alt="javascript" class="cpts lite-right-hidden-element" id="cpt2">
+                        <img src="./imgs/photoshop.webp" alt="photoshop" class="cpts lite-left-hidden-element" id="cpt3">
+                        <img src="./imgs/illustrator.webp" alt="illustrator" class="cpts lite-right-hidden-element" id="cpt4">
+                        <img src="./imgs/premiere_pro.webp" alt="premiere pro" class="cpts lite-left-hidden-element" id="cpt5">
                     </div>                   
                 </div>
             </div>
