--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <div class="logo">
-                    <img src="../imgs/logo_renart_trans.png" alt="logo du site">
+                    <img loading="lazy" src="./imgs/logo_renart_trans.webp" alt="logo du site">
                 </div>
                 <li><a class="nav_links" href="./index.html">Home</a></li>
                 <li class="dropdown-services">
@@ -109,7 +109,7 @@
             <h2 class="lite-left-hidden-element" id="ancreCd">Code projects</h2>
             <h3 class="lite-left-hidden-element" id="ancreCdLatest">Latest</h3>
             <div class="center-sec1">
-                <img class="lite-right-hidden-element" src="./imgs/CodeProjectSkillslang.png" alt="image de competences code">
+                <img class="lite-right-hidden-element" src="./imgs/CodeProjectSkillslang.webp" alt="image de competences code">
                 <p class="lite-left-hidden-element">Sleek and Responsive Design: With a mobile-first approach, the website adapts seamlessly to different screen sizes, providing an optimized experience for every user.
                     Dynamic Content: JavaScript brings the site to life with interactive elements, smooth animations, and real-time data updates, making browsing a truly engaging experience.
                     Fast Loading & Optimized Performance: I prioritized speed and efficiency, ensuring the website loads quickly without compromising on design or functionality.
