--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <div class="logo">
-                    <img src="../imgs/logo_renart_trans.png" alt="logo du site">
+                    <img loading="lazy" src="./imgs/logo_renart_trans.webp" alt="logo du site">
                 </div>
                 <li><a class="nav_links" href="./index.html">Home</a></li>
                 <li class="dropdown-services">
