--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="En savoir plus sur mon parcours, mes compétences en développement web, applications, et design graphique. Découvrez ma vision créative et mon engagement à fournir des solutions numériques de qualité." />
     <title>About</title>
     <link rel="stylesheet" href="../Css/About/about.css">
 </head>
