--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Découvrez un portfolio innovant en développement d'applications, création de sites web, et design graphique. Services personnalisés et créatifs pour transformer vos idées en réalité numérique. Obtenez des solutions modernes et impactantes, adaptées à vos besoins." />
         <title>Renart</title>
 
         <link rel="stylesheet" href="../Css/Home/home.css">
@@ -11,17 +12,10 @@
         <link rel="stylesheet" href="../Css/Home/homeSec3.css">
         <link rel="stylesheet" href="../Css/Home/homeSec4.css">
         <link rel="stylesheet" href="../Css/Home/homeSec5.css">
-
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
-
+        
     </head>
     <body>
         <header>
-            <!--<video autoplay loop muted plays-inline class="back-clip">
-                    <source src="vids/back.mp4" type="video/mp4">
-                </video>-->
             <nav>
                 <ul>
                     <div class="logo">
@@ -143,7 +137,7 @@
                         </ul>
                         <div id="account">
                             <div id="div_btn">
-                                <a href="./about.html#ancreH1Sec1">Learn more...</a>
+                                <a href="./about.html#ancreH1Sec1">See my bio...</a>
                             </div>
                             <div id="div_social">
                                 <a class="socials" href="https://github.com/ghostOfCo" target="_blank" id="git_link">
@@ -194,7 +188,7 @@
                 </div>
                 <div id="sec1_droite">
                     <p class="lite-right-hidden-element"><strong>Clean</strong> and <strong>efficient</strong> services offering you the <strong>satisfaction you expect.</strong></p>
-                    <a href="./services.html#ancreSec1" id="btn_voirplus_sec1" >See more</a>
+                    <a href="./services.html#ancreSec1" id="btn_voirplus_sec1" >See services</a>
                 </div>
             </div>
         </section>
@@ -224,7 +218,7 @@
                 </div>
                 <div id="sec3_droite">
                     <p class="lite-right-hidden-element">From the <strong>simple sketch</strong> to the <strong>concrete creation</strong>, everythings is done <strong>with care</strong>.</p>
-                    <a href="./services.html#ancreSec7"id="btn_plus_sec3">See more</a>
+                    <a href="./services.html#ancreSec7"id="btn_plus_sec3">See process</a>
                 </div>
             </div>
         </section>
@@ -240,7 +234,7 @@
                             -Video montages<br>
                         </strong>
                     </p>
-                    <a href="./about.html#ancreSec2"id="btn_plus_sec4">See more</a>
+                    <a href="./about.html#ancreSec2"id="btn_plus_sec4">See skills</a>
                 </div>
                 <div id="sec4_droite">
                     <div id="div_h1_sec4">
