--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Découvrez des exemples concrets de mes créations en développement d'applications, design web, et graphisme. Projets réalisés avec expertise et créativité." />
     <title>Portfolio</title>
     <link rel="stylesheet" href="../Css/Portfolio/portfolio.css">
 </head>
@@ -200,6 +201,6 @@
 
 
 
-    <script src="../Js/portfolio.js"></script>
+    <script src="../Js/portfolio.js" defer></script>
 </body>
 </html>
