--- a/services.html
+++ b/services.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Découvrez des services sur mesure en création de posters et logos, design graphique, ainsi qu'en développement de sites web et d'applications. Solutions créatives et innovantes pour renforcer votre identité visuelle et transformer vos idées en réalité numérique." />
+
     <title>Services</title>
     <link rel="stylesheet" href="../Css/Services/services.css">
 </head>
