--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contactez-moi pour discuter de vos projets de développement web, d'applications et de design graphique. Solutions créatives et personnalisées pour vos besoins." />
     <title>Contact</title>
     <link rel="stylesheet" href="../Css/Contact/contact.css">
 </head>
