about link solved

--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
         </div>
         <section class="section1">
             <div class="center">
-                <h1 class="lite-bottom-hidden-element" id="ancreH1Sec1">About me</h1>
+                <h1 class="lite-top-hidden-element" id="ancreH1Sec1">About me</h1>
                 <div class="profil-info">
                     <div class="lite-left-hidden-element profil">
                         <img src="./imgs/cosite.webp" alt="profil">
