--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                                 <a class="socials" href="https://www.linkedin.com/in/co-l-1a843b265/" target="_blank" id="link_link">
                                     <svg class="lite-bottom-hidden-element" xmlns="http://www.w3.org/2000/svg" width="96" height="96" viewBox="-2 -2 24 24"><g fill="#23AFD0"><path d="M15 11.13v3.697h-2.143v-3.45c0-.866-.31-1.457-1.086-1.457c-.592 0-.945.398-1.1.784c-.056.138-.071.33-.071.522v3.601H8.456s.029-5.842 0-6.447H10.6v.913l-.014.021h.014v-.02c.285-.44.793-1.066 1.932-1.066c1.41 0 2.468.922 2.468 2.902M6.213 5.271C5.48 5.271 5 5.753 5 6.385c0 .62.466 1.115 1.185 1.115h.014c.748 0 1.213-.496 1.213-1.115c-.014-.632-.465-1.114-1.199-1.114m-1.086 9.556h2.144V8.38H5.127z"/><path d="M10 18a8 8 0 1 0 0-16a8 8 0 0 0 0 16m0 2C4.477 20 0 15.523 0 10S4.477 0 10 0s10 4.477 10 10s-4.477 10-10 10"/></g></svg>
                                 </a>
-                                <a class="socials" href="https://www.instagram.com" target="_blank" id="insta_link">
+                                <a class="socials" href="https://www.instagram.com/gentlecol/" target="_blank" id="insta_link">
                                     <svg class="lite-bottom-hidden-element" xmlns="http://www.w3.org/2000/svg" width="96" height="96" viewBox="0 0 14 14"><g fill="none" stroke="#23AFD0" stroke-linecap="round" stroke-linejoin="round"><path d="M10.333 3.644a.25.25 0 1 1 0-.5m0 .5a.25.25 0 1 0 0-.5"/><path d="M.858 3.431A2.573 2.573 0 0 1 3.431.858h6.862a2.573 2.573 0 0 1 2.573 2.573v6.862a2.573 2.573 0 0 1-2.573 2.573H3.43a2.573 2.573 0 0 1-2.573-2.573V3.43Z"/><path d="M4.312 6.862a2.55 2.55 0 1 0 5.1 0a2.55 2.55 0 1 0-5.1 0"/></g></svg>
                                 </a>
-                                <a class="socials" href="https://www.x.com" target="_blank" id="x_link">
+                                <a class="socials" href="https://x.com/Coren_Code" target="_blank" id="x_link">
                                     <svg class="lite-bottom-hidden-element" xmlns="http://www.w3.org/2000/svg" width="96" height="96" viewBox="0 0 16 16"><path fill="#23AFD0" d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07l-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/></svg>
                                 </a>
                             </div>
